--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discord.js-muzykobot",
-  "version": "13.6.1",
+  "version": "13.6.2",
   "description": "Dodatek dla botów Discord.JS do słuchania muzyki z YouTube.",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,9 @@
     "ytdl-core": "^0.29.2",
     "ytpl": "^0.1.14",
     "ytsearcher": "^1.2.2",
-    "moment": "^2.23.0"
+    "moment": "^2.23.0",
+    "path": "0.12.7",
+    "locale-code": "2.0.2"
   },
   "repository": {
     "type": "git",
