--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discord.js-muzykobot",
-  "version": "13.6.3",
+  "version": "13.6.4",
   "description": "Dodatek dla botów Discord.JS do słuchania muzyki z YouTube.",
   "main": "index.js",
   "scripts": {
@@ -33,6 +33,6 @@
     "polski",
     "muzyka"
   ],
-  "author": "MrBoombastic & Venom",
+  "author": "[MrBoombastic, Venom]",
   "license": "MIT"
 }
